--- a/style.css
+++ b/style.css
@@ -21,3 +21,14 @@ div {
   text-decoration: underline;
   color: white;
 }
+
+a{
+  font-size: 50px;
+  font-family: verdana;
+}
+
+p{
+  font-size: 40px;
+  color: white;
+  font-family: futura;
+}
