--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ ul{
 
 body{
   background-color: #0077be;
+  padding: 1rem;
 }
 
 div {
@@ -33,6 +34,16 @@ p{
   font-family: futura;
 }
 
-table, th, td {
-  border:2px solid black;
+td, th {
+  width: 4rem;
+  height: 2rem;
+  border: 1px solid #ccc;
+  text-align: center;
+  background-color: white;
+  font font-family: verdana;
+}
+th {
+  background: #ff8c69;
+  border-color: white;
+  font font-family: verdana;
 }
