--- a/style.css
+++ b/style.css
@@ -6,18 +6,19 @@ h1{
 
 }
 
-ul{
+ul li{
   font-size: 30px;
   font-family: verdana;
+  display: inline;
+  padding-left: 60px;
 }
 
 body{
   background-color: #0077be;
-  padding: 1rem;
 }
 
 a{
-  font-size: 50px;
+  font-size: 30px;
   font-family: verdana;
 }
 
@@ -55,11 +56,15 @@ label, input {
 }
 
 div {
-  border: 99px solid;
+  border: 3px solid;
+  border-color: white;
+
 }
 
 .navbar {
-  background-color: black;
+  position: fixed;
+  background-color: #ff8c69 ;
   height: 100px;
   width: 100%;
   top: 0;
+  margin: 0;
