--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ h1{
   font-family: 'Rubik', sans-serif;
   color: #ff8c69;
   text-decoration: underline;
-
 }
 
 h2 {
@@ -22,17 +21,16 @@ body{
   background-color: #0077be;
 }
 
-a{
+a {
   font-size: 30px;
   font-family: verdana;
 }
 
-p{
+p {
   font-size: 20px;
   font-family: futura;
   margin: 0;
   text-align: justify;
-
 }
 
 td, th {
@@ -43,6 +41,7 @@ td, th {
   background-color: white;
   font font-family: verdana;
 }
+
 th {
   background: #ff8c69;
   border-color: white;
@@ -54,12 +53,9 @@ th {
   font font-family: 'Rubik', sans-serif;
   font-size: 18px;
   text-align: center;
-  display: block;
-}
-
-label, input {
 
 }
+
 
 div {
   border: 3px solid;
@@ -85,7 +81,7 @@ div {
   margin: 0 auto;
 }
 
-.main{
+.main {
   padding: 10%;
   height: 400px;
   text-align: center;
@@ -102,7 +98,6 @@ div {
   border: 0;
   vertical-align: top;
 
-
 }
 
 .about{
@@ -118,4 +113,18 @@ color: white;
 .articletwo{
 background-image: url(cookiejar.jpg);
 color: yellow;
+}
+
+#storelocations {
+  height: 400px;
+  width: 400px;
+  border: 0;
+  color: #ff8c69;
+
+}
+
+ol{
+  text-align: left;
+  font-size: 20px;
+  font-family: verdana;
 }
