adding locations to front page, fixing css for index and sales pages

--- a/sales.css
+++ b/sales.css
@@ -1,6 +1,6 @@
 h1{
   font-size: 70px;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Caveat Brush', cursive;
   color: #ff8c69;
   text-decoration: underline;
 }
