--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1{
   font-size: 70px;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Caveat Brush', cursive;
   color: #ff8c69;
   text-decoration: underline;
 }
@@ -10,12 +10,7 @@ h2 {
   text-decoration: underline;
 }
 
-ul li{
-  font-size: 30px;
-  font-family: verdana;
-  display: inline;
-  padding-left: 60px;
-}
+
 
 body{
   background-color: #0077be;
@@ -48,20 +43,6 @@ th {
   font font-family: verdana;
 }
 
-#cookie-store-form {
-  background-color: #ff8c69;
-  font font-family: 'Rubik', sans-serif;
-  font-size: 18px;
-  text-align: center;
-
-}
-
-
-div {
-  border: 3px solid;
-  border-color: white;
-
-}
 
 .navbar {
   background-color: #ff8c69 ;
@@ -69,6 +50,14 @@ div {
   width: 100%;
   top: 0;
   margin: 0;
+}
+
+#menu li{
+    font-size: 30px;
+    font-family: verdana;
+    display: inline;
+    padding-left: 60px;
+
 }
 
 .salmonpic {
@@ -79,6 +68,7 @@ div {
   width: 787px;
   height:246px;
   margin: 0 auto;
+  
 }
 
 .mainpage {
@@ -124,8 +114,62 @@ color: yellow;
 
 }
 
-ol{
-  text-align: left;
-  font-size: 20px;
-  font-family: verdana;
+.stores{
+  border: 1px solid;
+  border-color: black;
+  height: 400px;
+  width: 1130px;
+  background: lightgrey;
+  margin: 0 auto;
+
+}
+
+.firstAndPike{
+  border: 1px solid;
+  border-color: black;
+  height: 300px;
+  width: 220px;
+  background: pink;
+  margin: 0 auto;
+  display: inline-block;
+}
+
+.seatac{
+  border: 1px solid;
+  border-color: black;
+  height: 300px;
+  width: 220px;
+  background: pink;
+  margin: 0 auto;
+  display: inline-block;
+}
+
+.seattlecenter{
+  border: 1px solid;
+  border-color: black;
+  height: 300px;
+  width: 220px;
+  background: pink;
+  margin: 0 auto;
+  display: inline-block;
+}
+
+.capitolhill{
+  border: 1px solid;
+  border-color: black;
+  height: 300px;
+  width: 220px;
+  background: pink;
+  margin: 0 auto;
+  display: inline-block;
+}
+
+.alki{
+  border: 1px solid;
+  border-color: black;
+  height: 300px;
+  width: 220px;
+  background: pink;
+  margin: 0 auto;
+  display: inline-block;
 }
